@@ -1,0 +1,27 @@
+# bb_get_fasta_headers 
+
+Extracts headers from a single/multiple fasta file.
+
+## Overview
+
+Outputs a list of all fasta headers without the ">"in a fasta file.
+It can be a single or multiple fasta file.
+
+## Index
+
+* [main()](#main)
+
+### main()
+
+Outputs a list of all fasta headers without the ">"in a fasta file.
+It can be a single or multiple fasta file.
+
+#### Arguments
+
+* **$1** (A): valid fasta file.
+
+#### Exit codes
+
+* **0**: if succesful
+* **1**: if unsuccesful
+
