@@ -152,6 +152,7 @@ BIOBASH_HOME=$1
 
 BIOBASH_LIB="$BIOBASH_HOME/lib"
 BIOBASH_BIN="$BIOBASH_HOME/bin"
+BIOBASH_OS="$OS"
 
 
 SHML_LIB="$BIOBASH_LIB/shml/shml.sh" 
@@ -161,10 +162,10 @@ BB_NATIVE_LIB_PATH="$BIOBASH_LIB/bb_native"
 BB_NATIVE_LIB="$BB_NATIVE_LIB_PATH/bb_native.sh"
 
 if [[ $OS == "linux" ]];then
-    BIOBASH_BIN_OS="$BIOBASH_BIN/linux"
+    BIOBASH_BIN_OS="$BIOBASH_BIN/$BIOBASH_OS"
 fi
 if [[ $OS == "osx" ]];then
-    BIOBASH_BIN_OS="$BIOBASH_BIN/osx"
+    BIOBASH_BIN_OS="$BIOBASH_BIN/$BIOBASH_OS"
 fi
 
 
@@ -182,6 +183,7 @@ echo "
 BIOBASH_HOME="$BIOBASH_HOME"
 BIOBASH_LIB="$BIOBASH_LIB" 
 BIOBASH_BIN="$BIOBASH_BIN"
+BIOBASH_OS="$BIOBASH_OS"
 BIOBASH_BIN_OS="$BIOBASH_BIN_OS"
 
 SHML_LIB="$SHML_LIB"
@@ -194,6 +196,7 @@ BB_NATIVE_LIB="$BB_NATIVE_LIB"
 export BIOBASH_HOME
 export BIOBASH_LIB
 export BIOBASH_BIN
+export BIOBASH_OS
 export BIOBASH_BIN_OS
 export SHML_LIB
 export BASHUTILITY_LIB_PATH
@@ -202,7 +205,7 @@ export BB_NATIVE_LIB_PATH
 export BB_NATIVE_LIB
 
 
-export PATH="$BIOBASH_HOME:$BIOBASH_BIN_LINUX:$BIOBASH_BIN_OSX:$PATH"
+export PATH="$BIOBASH_HOME:$BIOBASH_BIN_OS:$BIOBASH_BIN/$PATH"
 
 
 " >> "$HOME"/.bashrc
