@@ -1,6 +1,10 @@
+2022-08-03
+* New BIOBASH_OS variable added in setup_environment. Replaces BIOBASH_OS_osx/linux vars.
+* bb_get_fasta_headers is used as started ponit to create a "model" script forfuther dev. 
+
 2022-06-03
-*Added unistallation script
-*Fixed BIOBASH_BIN_OS issue that was not getting the path to OS specific binaries.
+* Added unistallation script
+* Fixed BIOBASH_BIN_OS issue that was not getting the path to OS specific binaries.
 
 2022-05-03
 * checkdependencies and installbiobash scripts are stable and perform the minimum necessary
